aoc(2023-03): solve 🎄